fixe color contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@ nav.navbar {
     align-items: center;
 }
 #contact h1 {
-    color: #F3976C;
+    color: #fff;
     font-size: 2.3em;
     font-weight: 400;
     font-family: "helvetica";
@@ -204,7 +204,7 @@ nav.navbar {
 #about blockquote p {
     max-width: 500px;
     font-style: italic;
-    color: #7e7e7e;
+    color: #565656;
     font-weight: 700;
     margin-bottom: 0;
 }
@@ -262,10 +262,10 @@ nav.navbar {
     width: 100%;
     height: 100%;
     z-index: -2;
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(37, 37, 37, 0.7);
 }
 #what-we-do > div h2 {
-    color: #F3976C;
+    color: #fff;
     font-size: 1.5em;
 }
 #what-we-do > div p {
@@ -340,7 +340,7 @@ nav.navbar {
     padding: 40px 0;
 }
 #ready-to-work > div h2 {
-    color: #c27956;
+    color: #fff;
     font-size: 1.6em;
     margin-top: 65px;
 }
@@ -350,7 +350,7 @@ nav.navbar {
 
 /* FOOTER */
 footer {
-    background-color: #F3976C;
+    background-color: #2a2a2a;
     color: #fff;
 }
 footer > div {
@@ -385,7 +385,7 @@ footer > div ul li a {
     font-size: 2.5em;
 }
 footer > div > div ul li a {
-    color: #575757;
+    color: #fff;
     font-size: 1em;
 }
 footer > div ul li a:hover {
